--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-concurrency": "^4.0.4",
     "ember-data": "~5.4.1",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^3.0.1",
@@ -60,6 +61,7 @@
     "ember-source": "~6.4.0",
     "ember-template-imports": "^4.3.0",
     "ember-template-lint": "^6.1.0",
+    "ember-truth-helpers": "^4.0.3",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^9.1.0",
